# 2-classes

./: CMakeLists.txt  main.cpp  test.cpp
.github/workflows/: ci.yml
